apps/ttyd/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ttyd
  labels:
    app.kubernetes.io/name: ttyd
