apps/ttyd/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ttyd
  namespace: ttyd
  labels:
    app: ttyd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ttyd
  template:
    metadata:
      labels:
        app: ttyd
    spec:
      serviceAccountName: ttyd
      containers:
        - name: ttyd-k9s
          image: dylanbstorey/ttyd-k9s:v0.0.2
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          command:
            - ttyd
          args:
            - -p
            - "8080"
            - -W
            - k9s
            - -A
            - --readonly
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
