apps/ttyd/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ttyd
  namespace: ttyd
  labels:
    app: ttyd
spec:
  type: ClusterIP
  selector:
    app: ttyd
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
