apps/ttyd/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: ttyd
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ttyd
  namespace: ttyd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`k9s.lab.jackhumes.com`)
      kind: Rule
      middlewares:
        - name: tinyauth-forwardauth
      services:
        - name: ttyd
          port: 8080
  tls:
    secretName: ttyd-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ttyd-http
  namespace: ttyd
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`k9s.lab.jackhumes.com`)
      kind: Rule
      middlewares:
        - name: redirect-https
      services:
        - name: ttyd
          port: 8080
